abc: fix song with lyrics not being rendered